# live_human_pc

./: .env.beforeBuild  .env.beforeDev  .env.development  .env.production  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/assets/fonts/: iconfont.js
src/components/clone/: index.scss  index.vue
src/components/generate/: index.scss  index.vue
src/components/generate/components/: captions.vue  character.vue  text.vue  voice.vue
src/components/preview-video/: index.scss  index.vue
src/layout/: Menu.vue  title-bar.vue
src/router/: index.js
src/styles/: _base.scss  _normalize.scss  _variables.scss  element-variables.scss
src/utils/: date.js  http.js  unit.js
src/views/: index.vue
src/views/ai-clone/character/: index.vue  list.scss  list.vue
src/views/ai-clone/voice/: list.scss  list.vue
src/views/ai-video/generate-oral-broadcast/: index.scss  index.vue
src/views/ai-video/list/: index.scss  index.vue
src/views/login/: index.scss  index.vue
